# SoundDrive

./: .gitignore  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
SoundDrive/: main.py  main.ui  music_controller.py  style.qss
SoundDrive/Dialogs/: add_remove_music_dir_dialog.py  delete_playlist_dialog.py  edit_playlist_dialog.py
SoundDrive/Functions/: add_songs.py  covers.py  music_dir.py  playlist.py  stats.py
SoundDrive/MenuButton/: menu_button.py  menu_button.ui
SoundDrive/PlaylistSide/: playlist_entry.py  playlist_entry.ui
SoundDrive/PlaylistTab/: song_entry.py  song_entry.ui
SoundDrive/SearchResult/: search_result.py
SoundDrive/SoundDriveDB/: __init__.py  artists.py  config.py  db.py  playlists.py  search.py  songs.py  stats.py
SoundDrive/Widgets/: generic_control_button.py  play_pause_button.py  song_icon.py  time_slider.py  volume_slider.py
SoundDrive/Widgets/AddSongs/: found_song.py  found_song.ui  song_actions.py  song_actions.ui
SoundDrive/Widgets/MenuButton/: menu_button.py
SoundDrive/Widgets/Playlist/: playlist_icon.py  song_entry.py  song_entry.ui
SoundDrive/Widgets/PlaylistSide/: playlist_entry.py  playlist_entry.ui
SoundDrive/Widgets/SearchResult/: search_result.py  search_result.ui
SoundDrive/Widgets/SongEntry/: song_entry.py  song_icon.py
SoundDrive/functions/: add_songs.py
