[project]
name = "SoundDevice"
description = "Simple Music Player"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Namester (Nmstr)", email="publicNamester@gmail.com" }
]
keywords = ["music", "audio", "playback", "sound", "PySide6", "QT", "GUI"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "PySide6",
]
[project.urls]
Source = "https://github.com/Nmstr/SoundDevice"
Documentation = "https://nmstr.github.io/SoundDevice/"
Issues = "https://github.com/Nmstr/SoundDevice/issues"

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "N8"]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["E712"]
